--- a/apply-form.html
+++ b/apply-form.html
@@ -16,7 +16,7 @@
     </marquee>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://usebasin.com/f/681b8cd772c9" method="post">
+  <form class="sm:hidden lg:block md:block" action="https://formspree.io/forms/mvoekarb/" method="post">
 
 <div style="position: absolute; left: 1.5rem; top:8rem; width: 90%;">
   <div>
