--- a/apply-form.html
+++ b/apply-form.html
@@ -45,7 +45,7 @@
   </p>
 </div>
 <div>
-  <a class="w-32 h-20 block" href="https://detailed-video-29b30.web.app/detailed%20video.mp4"><img class="w-32 h-20 mx-3" src="https://cdn.glitch.global/26db6cad-21fa-4aee-9093-92af7de338e9/video-logo.jpg?v=1707684416461" alt=""></a>
+  <a class="w-32 h-20 block" href="https://detailed-video-29b30.web.app/detailed%20video.mp4"><img class="w-32 h-20 mx-3" src="https://formspree.io/forms/mvoekarb/" alt=""></a>
   </div>
   <div>
   <p class=" pl-3 text-[12px] font-semibold">
